fixed alignment, added labels, added home icon

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -6,7 +6,6 @@
 
 .left-nav{
   flex:.25;
-  background-color: red;
 }
 
 .left-area, .right-area{
